tests/calico_testcases/example_policies/testcase23-NetworkSet/testcase23-networkpolicy-networkset.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase23-networkpolicy-networkset
  namespace: kube-system
spec:
  selector: has(tier)
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: role == 'db'
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: role == 'db'
